# aria2-next

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile.am  README.md  configure.ac
.github/: PULL_REQUEST_TEMPLATE.md
cmake/: Aria2Sources.cmake  Aria2TestSources.cmake  Sources.cmake  TestSources.cmake  config.h.cmake.in  libaria2.pc.cmake.in
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  INTEGRATION.md  PRIVACY.md  README.md  RELEASE.md  RELEASE_INTEGRITY.md  SECURITY.md  SUPPORT.md  TROUBLESHOOTING.md
maintenance/: README.md  cmake-migration-progress.md
packaging/: README.md  dependencies.env
scripts/: release.sh
src/: ARC4Encryptor.cc  ARC4Encryptor.h  AbstractBtMessage.h  AbstractCommand.cc  AbstractCommand.h  AbstractDiskWriter.h  AbstractHttpServerResponseCommand.h  AbstractOptionHandler.h  AbstractProxyRequestCommand.h  AbstractProxyResponseCommand.h  AbstractSingleDiskAdaptor.cc  AbstractSingleDiskAdaptor.h  ActivePeerConnectionCommand.h  AdaptiveFileAllocationIterator.h  AdaptiveURISelector.cc  AdaptiveURISelector.h  Adler32MessageDigestImpl.h  AnnounceList.cc  AnonDiskWriterFactory.h  ApiCallbackDownloadEventListener.h  AsioRuntime.cc  AsioRuntime.h  AsyncNameResolver.cc  AsyncNameResolverMan.cc  AsyncNameResolverMan.h  AuthConfigFactory.cc  AutoSaveCommand.h  BackupIPv4ConnectCommand.h  BoostJsonValue.cc  BoostJsonValue.h  BtAllowedFastMessage.cc  BtAllowedFastMessage.h  BtBitfieldMessage.h  BtBitfieldMessageValidator.h  BtCancelMessage.h  BtCheckIntegrityEntry.cc  BtCheckIntegrityEntry.h  BtChokeMessage.h  BtDependency.cc  BtDependency.h  (+473 more)
test/: AllTest.cc  Makefile.am
tests/: ARC4Test.cc  AbstractCommandTest.cc  AllTest.cc  AnnounceListTest.cc  Aria2ApiTest.cc  AsyncNameResolverManTest.cc  AuthConfigFactoryTest.cc  Base32Test.cc  Base64Test.cc  Bencode2Test.cc  BitfieldManTest.cc  BittorrentHelperTest.cc  BtRegistryTest.cc  (+209 more)
(+112 files in other folders)
